# seq-fx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
installer/: windows.iss
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: ChorusEngine.cpp  ChorusEngine.h  DelayEngine.cpp  DelayEngine.h  DistortionEngine.cpp  DistortionEngine.h  FilterEngine.cpp  FilterEngine.h  ReverbEngine.cpp  ReverbEngine.h  SidechainCompressorEngine.cpp  SidechainCompressorEngine.h
src/presets/: PresetManager.cpp  PresetManager.h
src/sequencer/: ParameterMatrix.h  SequencerEngine.cpp  SequencerEngine.h  SequencerState.cpp  SequencerState.h  SequencerUndoableActions.h
src/ui/: EffectControls.cpp  EffectControls.h  EffectSection.cpp  EffectSection.h  GateLaneComponent.cpp  GateLaneComponent.h  LaneComponent.cpp  LaneComponent.h  SequencerMatrixComponent.cpp  SequencerMatrixComponent.h  ToolbarComponent.cpp  ToolbarComponent.h
